fix: Corrigindo validações do ParserCSV e do ParserTXT